--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "python-preview",
+    "name": "python-preview-test",
     "displayName": "%displayName%",
     "description": "%description%",
     "version": "0.0.1",
