Add ThirdPartyNotices.txt in .vscodeignore and update name field in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "python-preview-test",
+    "name": "python-preview",
     "displayName": "%displayName%",
     "description": "%description%",
     "version": "0.0.2",
